fix wrong position of header nav

--- a/css/main.css
+++ b/css/main.css
@@ -69,19 +69,34 @@ header {
       grid-column: 1/-1;
       height: 200px;
       background-color: #9C9C9C;
+      color: #fff;
 
-      font-size: 23px;
+      font-size: 23px; 
+      align-self: end;
 }
 
 
-#top-nav ul{
+#top-nav{
       grid-column: 1/-1;
+      align-self: end;
 }
 
-#top-nav-L li{
-      display: inline;
+#top-nav-L {      
+      grid-column: 1/6;
+      align-self: end;}
 
+#top-nav-L li {
+      margin-right: 82px;
+      display: inline;
+}
+
+#top-nav-L ul{
+      display: flex;
+      display: flex;
+      justify-content: center;
+      align-items: center;
       margin-right: 80px;
+      align-self: end;
 }
 
 
@@ -92,12 +107,14 @@ header {
 
 #main-logo {
       grid-column: 6/8;
+      align-self: end;
 
-      margin-top: 0;
+      margin-top: 20px;
 }
 
 #top-nav-R {      
-      grid-column: 9/-1;}
+      grid-column: 9/-1;
+      align-self: end;}
 
 #top-nav-R li {
       margin-right: 82px;
@@ -117,6 +134,8 @@ main {
       margin-top: 0;
 }
 
+
+
 #hero-text {
       font-size: 85px;
       font-family: 'ubuntu',sans-serif;
@@ -124,17 +143,25 @@ main {
       font-style: normal;
 
       margin-top: 130px;
-      margin-left: 20px;
+      margin-left: 140px;
       grid-column: 1/6;
 }
+
+
+#hero-1 {
+      grid-column: 1/7;
+      margin-left: -140px;
+}
+
 
 #hero-2 {
       width: 960px;
       height: 880px;
       background-color: #C8C8C8;
-      margin-left: 560%;
+      margin-left: -10px;
+      grid-column: 7/-1;
 
-      font-size: 70px;
+      font-size: 140px;
       text-align: center;
 }
 
